# postgres-notes

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: init.sql
src/: __init__.py
src/chapter_01/: 01_data_types_and_schemas.ipynb  02_create_tables_and_constraints.ipynb  03_alter_and_manage_schema.ipynb  README.md  __init__.py
src/chapter_02/: 01_insert_fundamentals.ipynb  02_update_and_delete.ipynb  03_upsert_and_idempotent_patterns.ipynb  README.md  __init__.py
src/chapter_03/: 01_select_and_where.ipynb  02_pattern_matching.ipynb  03_sorting_and_pagination.ipynb  README.md  __init__.py
src/chapter_04/: 01_aggregate_functions.ipynb  02_group_by_and_having.ipynb  03_rollup_cube_grouping_sets.ipynb  README.md  __init__.py
src/chapter_05/: 01_inner_and_outer_joins.ipynb  02_cross_and_self_joins.ipynb  03_lateral_joins_and_anti_patterns.ipynb  README.md  __init__.py
src/chapter_06/: 01_subqueries.ipynb  02_common_table_expressions.ipynb  03_recursive_ctes.ipynb  README.md  __init__.py
src/chapter_07/: 01_ranking_functions.ipynb  02_value_and_aggregate_windows.ipynb  03_window_frames.ipynb  README.md  __init__.py
src/chapter_08/: 01_views_and_materialized_views.ipynb  02_index_types_and_strategies.ipynb  03_explain_basics.ipynb  README.md  __init__.py
src/chapter_09/: 01_functions.ipynb  02_stored_procedures.ipynb  03_triggers_and_automation.ipynb  README.md  __init__.py
src/chapter_10/: 01_acid_and_transaction_basics.ipynb  02_isolation_levels_and_mvcc.ipynb  README.md  __init__.py  (+1 more)
tests/: conftest.py
(+27 files in other folders)
